--- a/nosotros.html
+++ b/nosotros.html
@@ -28,22 +28,7 @@
 		  href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap"
 		  rel="stylesheet"
 		/>
-		<link
-		  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-		  rel="stylesheet"
-		  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-		  crossorigin="anonymous"
-		/>
-		<script
-		  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-		  integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-		  crossorigin="anonymous"
-		></script>
-		<script
-		  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-		  integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-		  crossorigin="anonymous"
-		></script>
+	
 		<link rel="stylesheet" href="css/main.css" />
 	  </head>
 
@@ -125,13 +110,13 @@
 				<div class="nosotrosTitle">Atención al Cliente </div>
 			</div>
 			<div class="box-6">
-				<img class="nosotrosImage" src="Juan.jpg">
+				<img class="nosotrosImage" src="img/Juan.jpg">
 			</div>
 			<div class="box-7">
-				<img class="nosotrosImage" src="Samanta.jpg">
+				<img class="nosotrosImage" src="img/Samanta.jpg">
 			</div>
 			<div class="box-8">
-				<img class="nosotrosImage" src="Andrea.jpg">
+				<img class="nosotrosImage" src="img/Andrea.jpg">
 			</div>
 			<div class="box-9">
 				<div class="nosotrosTitle">Juan A. Orobello</div>
