--- a/servicios.html
+++ b/servicios.html
@@ -28,22 +28,8 @@
 		  href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap"
 		  rel="stylesheet"
 		/>
-		<link
-		  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-		  rel="stylesheet"
-		  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-		  crossorigin="anonymous"
-		/>
-		<script
-		  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-		  integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-		  crossorigin="anonymous"
-		></script>
-		<script
-		  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-		  integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-		  crossorigin="anonymous"
-		></script>
+		
+	
 		<link rel="stylesheet" href="css/main.css" />
 	  </head>
 
@@ -85,7 +71,7 @@
 
 		<div class="services">
 			<div class="contenedor">
-				<img class="circleImages" src="climatizacion.png" />
+				<img class="circleImages" src="img/climatizacion.png" />
 				<div class="centrado">
 
 					<h3 class="servicesTitles">Climatización</h3>
@@ -94,7 +80,7 @@
 			</div>
 			<div class="contenedor">
 
-				<img class="circleImages" src="electricidad.jpg" />
+				<img class="circleImages" src="img/electricidad.jpg" />
 				<div class="centrado">
 
 					<h3 class="servicesTitles">Electricidad</h3>
@@ -104,7 +90,7 @@
 
 			<div class="contenedor">
 
-				<img class="circleImages" src="hidráulico.jpg" />
+				<img class="circleImages" src="img/hidráulico.jpg" />
 				<div class="centrado">
 
 					<h3 class="servicesTitles">Mantenimiento hidráulico y mecánico</h3>
@@ -117,19 +103,19 @@
 		</div>
 		<div class="services">
 			<div class="contenedor">
-				<img class="circleImages" src="obrasciviles.jpg" />
+				<img class="circleImages" src="img/obrasciviles.jpg" />
 				<div class="centrado">
 					<h3 class="servicesTitles">Obras Civiles</h3>
 				</div>
 			</div>
 			<div class="contenedor">
-				<img class="circleImages" src="construccion.jpg" />
+				<img class="circleImages" src="img/construccion.jpg" />
 				<div class="centrado">
 					<h3 class="servicesTitles">Construcción</h3>
 				</div>
 			</div>
 			<div class="contenedor ">
-				<img class="circleImages" src="soldadura.png" />
+				<img class="circleImages" src="img/soldadura.png" />
 				<div class="centrado">
 					<h3 class="servicesTitles">Soldadura y Metalúrgica</h3>
 				</div>
