[CODERHOUSE] Metodologia BEM en valores.html

--- a/valores.html
+++ b/valores.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,70 +29,77 @@
     />
     <link rel="stylesheet" href="css/main.css" />
   </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><h1>JA Mantenimiento</h1></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="servicios.html">Servicios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="valores.html">Valores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contacto.html">Contacto</a>
-          </li>
-
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-          <button class="btn btn-outline-primary" type="submit">Buscar</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-<div class="valoresContainer">
-    <div class="gridValues">
-      <!-- <div class="val-1 ">
-
-      </div>
-
-      <div class="val-2 ">
-
-      </div>
-      <div class="val-3 ">
-
-      </div>
-      <div class="val-4 ">
-
-      </div>
-      <div class="val-5 ">
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><h1>JA Mantenimiento</h1></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="valores.html">Valores</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Buscar"
+              aria-label="Buscar"
+            />
+            <button class="btn btn-outline-primary" type="submit">
+              Buscar
+            </button>
+          </form>
         </div>
-        -->
-
-
       </div>
+    </nav>
+    <h2>Nuestros Valores</h2>
 
+    <div class="valorescontainer">
+      <div class="valores">
+        <div class="valores__centrado">
+          <div class="valores__titles">
+            <div class="valores__item">
+              Responsabilidad
+            </div>
+            <div class="valores__item">
+              Compromiso
+            </div>
+            <div class="valores__item">
+              Eficiencia
+            </div>
+            <div class="valores__item">Pasión</div>
+            <div class="valores__item">
+              Evolución
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-  </div>
-
-
-
-
-
-
-</body>
-
+  </body>
 </html>
