--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Servicio Mantenimiento General</title>
+    <meta
+      name="description"
+      content="JA mantenimiento es una empresa dedicada al mantenimiento integral del hogar y empresas. Servicios eléctricos, construcción, metalúrgica entre otros"
+    />
+    <meta
+      name="keywords"
+      content="Mendoza Mantenimiento Hogar Electricidad Reparación Construcción"
+    />
+    <title>JA Mantenimiento General</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -118,14 +126,14 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active text-center ">
-            <img src="img/andesmar-logo.png" class="w-50 " alt="..." />
+          <div class="carousel-item active text-center">
+            <img src="img/andesmar-logo.png" class="w-50" alt="..." />
           </div>
-          <div class="carousel-item text-center ">
-            <img src="img/andesmar-logo.png" class=" w-50" alt="..." />
+          <div class="carousel-item text-center">
+            <img src="img/andesmar-logo.png" class="w-50" alt="..." />
           </div>
-          <div class="carousel-item text-center ">
-               <img src="img/andesmar-logo.png" class="w-50" alt="..." />
+          <div class="carousel-item text-center">
+            <img src="img/andesmar-logo.png" class="w-50" alt="..." />
           </div>
         </div>
         <button
