--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Servicio Mantenimiento General</title>
+		<meta
+		name="description"
+		content="JA mantenimiento es una empresa dedicada al mantenimiento integral del hogar y empresas. Servicios eléctricos, construcción, metalúrgica entre otros"
+	  />
+	  <meta
+		name="keywords"
+		content="Mendoza Mantenimiento Hogar Electricidad Reparación Construcción"
+	  />
+		<title>JA Nosotros</title>
 	
 		<link
 		  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
