[Javascript] Uso prompt, alert y console.log

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="keywords"
       content="Mendoza Mantenimiento Hogar Electricidad Reparación Construcción"
     />
+    <script src="main.js"></script>
     <title>JA Mantenimiento General</title>
 
     <link
