--- a/servicios.html
+++ b/servicios.html
@@ -1,140 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="JA mantenimiento es una empresa dedicada al mantenimiento integral del hogar y empresas. Servicios eléctricos, construcción, metalúrgica entre otros"
+    />
+    <meta
+      name="keywords"
+      content="Mendoza Mantenimiento Hogar Electricidad Reparación Construcción"
+    />
+    <title>JA Servicios</title>
 
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta
-		name="description"
-		content="JA mantenimiento es una empresa dedicada al mantenimiento integral del hogar y empresas. Servicios eléctricos, construcción, metalúrgica entre otros"
-	  />
-	  <meta
-		name="keywords"
-		content="Mendoza Mantenimiento Hogar Electricidad Reparación Construcción"
-	  />
-		<title>JA Servicios</title>
-	
-		<link
-		  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-		  rel="stylesheet"
-		  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-		  crossorigin="anonymous"
-		/>
-		<script
-		  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-		  integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-		  crossorigin="anonymous"
-		></script>
-		<script
-		  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-		  integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-		  crossorigin="anonymous"
-		></script>
-	
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-		  href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap"
-		  rel="stylesheet"
-		/>
-		
-	
-		<link rel="stylesheet" href="css/main.css" />
-	  </head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+      integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<div class="container-fluid">
-		  <a class="navbar-brand" href="#"><h1>JA Mantenimiento</h1></a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-			  <li class="nav-item">
-				<a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="nosotros.html">Nosotros</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="servicios.html">Servicios</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="valores.html">Valores</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="contacto.html">Contacto</a>
-			  </li>
-  
-			</ul>
-			<form class="d-flex">
-			  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-			  <button class="btn btn-outline-primary" type="submit">Buscar</button>
-			</form>
-		  </div>
-		</div>
-	  </nav>
-	</div>
-	<div class="servicesContainer">
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><h1>JA Mantenimiento</h1></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="servicios.html">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="valores.html">Valores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Buscar"
+                aria-label="Buscar"
+              />
+              <button class="btn btn-outline-primary" type="submit">
+                Buscar
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="container-fluid">
+      <div class="services">
+        <div class="contenedor">
+          <img class="circleImages" src="img/climatizacion.png" />
+          <div class="centrado">
+            <h3 class="servicesTitles">Climatización</h3>
+          </div>
+        </div>
+        <div class="contenedor">
+          <img class="circleImages" src="img/electricidad.jpg" />
+          <div class="centrado">
+            <h3 class="servicesTitles">Electricidad</h3>
+          </div>
+        </div>
 
-		<div class="services">
-			<div class="contenedor">
-				<img class="circleImages" src="img/climatizacion.png" />
-				<div class="centrado">
-
-					<h3 class="servicesTitles">Climatización</h3>
-
-				</div>
-			</div>
-			<div class="contenedor">
-
-				<img class="circleImages" src="img/electricidad.jpg" />
-				<div class="centrado">
-
-					<h3 class="servicesTitles">Electricidad</h3>
-
-				</div>
-			</div>
-
-			<div class="contenedor">
-
-				<img class="circleImages" src="img/hidráulico.jpg" />
-				<div class="centrado">
-
-					<h3 class="servicesTitles">Mantenimiento hidráulico y mecánico</h3>
-				</div>
-			</div>
-
-
-
-
-		</div>
-		<div class="services">
-			<div class="contenedor">
-				<img class="circleImages" src="img/obrasciviles.jpg" />
-				<div class="centrado">
-					<h3 class="servicesTitles">Obras Civiles</h3>
-				</div>
-			</div>
-			<div class="contenedor">
-				<img class="circleImages" src="img/construccion.jpg" />
-				<div class="centrado">
-					<h3 class="servicesTitles">Construcción</h3>
-				</div>
-			</div>
-			<div class="contenedor ">
-				<img class="circleImages" src="img/soldadura.png" />
-				<div class="centrado">
-					<h3 class="servicesTitles">Soldadura y Metalúrgica</h3>
-				</div>
-			</div>
-
-
-		</div>
-
-
-
-	</div>
-</body>
-
+        <div class="contenedor">
+          <img class="circleImages" src="img/hidráulico.jpg" />
+          <div class="centrado">
+            <h3 class="servicesTitles">Mantenimiento hidráulico y mecánico</h3>
+          </div>
+        </div>
+      </div>
+      <div class="services">
+        <div class="contenedor">
+          <img class="circleImages" src="img/obrasciviles.jpg" />
+          <div class="centrado">
+            <h3 class="servicesTitles">Obras Civiles</h3>
+          </div>
+        </div>
+        <div class="contenedor">
+          <img class="circleImages" src="img/construccion.jpg" />
+          <div class="centrado">
+            <h3 class="servicesTitles">Construcción</h3>
+          </div>
+        </div>
+        <div class="contenedor">
+          <img class="circleImages" src="img/soldadura.png" />
+          <div class="centrado">
+            <h3 class="servicesTitles">Soldadura y Metalúrgica</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
