[JavaScriptCurso]Add Ajax, styles and form

--- a/index.html
+++ b/index.html
@@ -9,13 +9,72 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="scss/alumnos.css" />
     <title>Listado de Alumnos</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h3>Evaluación contínua alumnos 3° 3° CENS 3-456 De la Libertad</h3>
 
-    <h3>Listado de Alumnos</h3>
-    <button id="agregar">Agregar Alumno</button>
-    <ul id="alumnos">
-    </ul>
-     <script src="main.js"></script>
-</body>
+    <div id="mainform">
+      <div class="innerdiv">
+      <h2>Ingrese aquí la información</h2>
+      <form id="form" name="form">
+      <div>
+      <label>Nombre y Apellido :</label>
+      <input id="name" type="text">
+      <label>Materia:</label>
+      <input id="subject" type="text">
+      <label>Cartilla:</label>
+      <input id="book" type="text">
+      <label>Nota :</label>
+      <input id="nota1" type="text">
+      <label>Evaluación:</label>
+      <input id="exam" type="text">
+      <label>Nota :</label>
+      <input id="nota2" type="text">
+      <input id="submit" onclick="submitStudentData()" type="button" value="Submit">
+      </div>
+      </form>
+      <div id="clear"></div>
+      </div>
+      </div>
+
+      <!-- <ul>
+       <li>
+         <label for="name">Nombre y Apellido:</label>
+         <input type="text" id="name" name="user_name">
+       </li>
+       <li>
+         <label for="materia">Materia:</label>
+         <input type="materia" id="materia" name="materia">
+       </li>
+       <li>
+        <label for="cartilla">Cartilla:</label>
+        <input type="text" id="cartilla" name="cartilla">
+      </li>
+      <li>
+        <label for="notacartilla">Nota Cartilla:</label>
+        <input type="text" id="notacartilla" name="notacartilla">
+      </li>
+      <li>
+        <label for="notaevaluacion">Nota Evaluación:</label>
+        <input type="text" id="notaevaluacion" name="notaevaluacion">
+      </li>
+
+  <li>
+    <label for="comments">Comentarios:</label>
+    <textarea id="comments" name="comments"></textarea>
+
+
+      </ul>
+      <input type="submit" value="Submit" id="btnSubmit"/>
+    </form> -->
+
+
+     
+    <ul id="alumnos"></ul>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    
+    <script src="main.js"></script>
+
+
+  </body>
 </html>
